# claude-animation

./: README.md  pyproject.toml
Formula/: claude-animation.rb
claude_animation/: cli.py  engine.py
claude_animation/animations/: __init__.py  whip.py
docs/specs/: 2026-04-27-claude-animation-design.md
