[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-animation"
version = "0.1.0"
description = "Brew-installable terminal animations"
requires-python = ">=3.9"
dependencies = ["click>=8.0"]

[project.scripts]
claude-animation = "claude_animation.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["claude_animation*"]
